--- a/example/BlazorTenant.Example/Properties/launchSettings.json
+++ b/example/BlazorTenant.Example/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:59832",
-      "sslPort": 44336
+      "applicationUrl": "http://localhost:45311",
+      "sslPort": 44360
     }
   },
   "profiles": {
@@ -18,6 +18,7 @@
     },
     "BlazorTenant.Example": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
