--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,9 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore src/BlazorTenant/BlazorTenant.csproj
     - name: Test
-      run: dotnet test --configuration Release
-      working-directory: test/BlazorTenant.Tests
+      uses: zyborg/dotnet-tests-report@v1
+      with:
+        project_path: test/BlazorTenant.Tests
+        report_name: blazor_tenant_tests
+        report_title: Blazor Tenant Tests
+        github_token: ${{ secrets.GITHUB_TOKEN }}
